--- a/src/app/layout/component/cart/cart.component.html
+++ b/src/app/layout/component/cart/cart.component.html
@@ -1,6 +1,6 @@
-<div class="mb-2">
+<div class="mb-2 hidden">
     <button style="width: 45px; height: 45px; display: flex; justify-content: center; " pButton pRipple type="button"
-        class="p-button-rounded p-button-lg p-button-raised" 
+        class="p-button-rounded p-button-lg p-button-raised"
         [ngClass]="{
             'p-button-secondary p-button-text whitebackground': !buttonActive ,
             'p-button-help '     : buttonActive,
