--- a/src/app/layout/component/favorite/favorite.component.html
+++ b/src/app/layout/component/favorite/favorite.component.html
@@ -1,1 +1,1 @@
-<i class="pi pi-heart favorite-icon" [ngClass]=" {'selected-favorite': selected}" (click)="onSelected()"></i>
+<i class="pi  favorite-icon" [ngClass]=" {'selected-favorite': selected, 'pi-heart': !selected,'pi-heart-fill': selected}" (click)="onSelected()"></i>
