--- a/src/app/layout/component/favorite/favorite.component.scss
+++ b/src/app/layout/component/favorite/favorite.component.scss
@@ -1,7 +1,11 @@
 .selected-favorite {
-    color: purple;
+  color: purple;
+  &::before{
+    content: "\e9e1";
+  }
 }
 
 .favorite-icon {
-    font-size: 20px;
+  color: purple;
+  font-size: 20px;
 }
