--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -9,8 +9,8 @@
             <app-category (onEmitCategoryID)="emitCategoryID($event)"></app-category>
         </div>
     </div>
-    
-    <div class = "flex justify-content-end w-6">
+
+    <div class = "flex justify-content-end w-6 mt-3">
         <app-user (onOpenSideMyOrders)="openSideMyOrders()"></app-user>
     </div>
 </div>
