--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -6,7 +6,7 @@
             <app-search></app-search>
         </div>
         <div>
-            <app-category (onEmitCategoryID)="emitCategoryID($event)"></app-category>
+            <app-category (onEmitCategoryID)="emitCategoryID($event)" [categorias]="categorias"></app-category>
         </div>
     </div>
 
