--- a/src/app/layout/component/search/search.component.html
+++ b/src/app/layout/component/search/search.component.html
@@ -1,4 +1,4 @@
 <span class="p-input-icon-left w-full srch-btn">
     <i class="pi pi-search"></i>
-    <input class="" placeholder="Buscar en MiniMarket" type="text" pInputText/>
+    <input class="" placeholder="Buscar en MiniMarket" type="text" pInputText (keypress)="onSearchProducts($event)" />
 </span>
