--- a/src/app/layout/component/info/info.component.html
+++ b/src/app/layout/component/info/info.component.html
@@ -1,28 +1,28 @@
 <div class="w-full pl-6 pt-4 flex flex-row">
     <div class="flex flex-column w-4">
-        <div class="title text-lg font-medium">Servicio al cliente</div>
-        <ul>
-            <li class="text-sm">Preguntas frecuentes</li>
-            <li class="text-sm">Cambios y devoluciones</li>
-            <li class="text-sm">Términos y condiciones</li>
-            <li class="text-sm">Política de privacidad</li>
-            <li class="text-sm">Libro de reclamaciones</li>
+        <div class="title text-sm font-bold">Servicio al cliente</div>
+        <ul class="pt-3 m-0">
+            <li class="text-xs mb-2">Preguntas frecuentes</li>
+            <li class="text-xs mb-2">Cambios y devoluciones</li>
+            <li class="text-xs mb-2">Términos y condiciones</li>
+            <li class="text-xs mb-2">Política de privacidad</li>
+            <li class="text-xs mb-2">Libro de reclamaciones</li>
         </ul>
     </div>
     <div class="flex flex-column w-4">
-        <div class="title text-lg font-medium mb-1">Sobre la tienda</div>
-        <div class="item text-sm">Horarios de atención</div>
-        <div class="item text-sm">Todos los días 24 hrs</div>
-        <div class="item text-sm">Info@minimarket.com</div>
-        <div class="item text-sm">Ver dirección</div>
-        <div class="item text-sm">Ver WhatsApp</div>
+        <div class="title text-sm font-bold mb-3">Sobre la tienda</div>
+        <div class="item text-xs mb-2">Horarios de atención</div>
+        <div class="item text-xs mb-2">Todos los días 24 hrs</div>
+        <div class="item text-xs mb-2">Info@minimarket.com</div>
+        <div class="item text-xs mb-2">Ver dirección</div>
+        <div class="item text-xs mb-2">Ver WhatsApp</div>
     </div>
     <div class="flex flex-column w-4">
-        <div class="item title text-lg font-medium mb-1">Medios de pago</div>
-        <div class="item text-sm">Contraentrega</div>
-        <div class="item text-sm">Pago en efectivo</div>
-        <div class="item text-sm">Todas las tarjetas</div>
-        <div class="flex flex-row pt-1">
+        <div class="item title text-sm font-bold mb-3">Medios de pago</div>
+        <div class="item text-xs mb-2">Contraentrega</div>
+        <div class="item text-xs mb-2">Pago en efectivo</div>
+        <div class="item text-xs mb-2">Todas las tarjetas</div>
+        <div class="flex flex-row pt-2">
             <img class="h-2rem w-auto pr-1" src="../../../../assets/americanexpress.png" alt="">
             <img class="h-2rem w-auto px-1" src="../../../../assets/mastercard.png" alt="">
             <img class="h-2rem w-auto px-1" src="../../../../assets/paypal.jpg" alt="">
