--- a/src/app/layout/component/card/card.component.html
+++ b/src/app/layout/component/card/card.component.html
@@ -7,12 +7,14 @@
                 </div>
                 <img class="h-full w-full" (click)="emitProductID(1)" src="../../../../assets/perfil-tiendi-icono.png" alt="" />
             </div>
-            <div class="text-xs gray pt-1"><b> {{ producto.MarcaDes }}Marca</b></div>
-            <div class="text-base pt-1">{{ producto.Nombre }}</div>
+            <div class="text-xs gray pt-1 mb-1"><b> {{ producto.MarcaDes }}Marca</b></div>
+            <div class="text-sm pt-1">{{ producto.Nombre }}</div>
             <div class="font-bold pt-1 price_box desc_"> <b> ${{ producto.Precio }}</b> <div class="p-tag tag_price p-1 ml-2">10%</div>  </div>
+            <div class="font-bold pt-1 price_box price_ black"> s/. 20.00</div>
+            <div class="text-xs pt-1 price_box price_ gray"> s/. 20.00</div>
             <div class="flex flex-row justify-content-center mt-4">
                 <button pButton pRipple type="button" icon="pi pi-minus" class="p-button-rounded p-button-help p-button-text p-button-sm mr-auto"></button>
-                <p class="w-5 p-inputtext-sm text-center quantity" type="text" pInputText>
+                <p class="w-4 p-input text-xs text-center quantity quantity_val" type="text" pInputText>
                     {{ quantity }} unid
                 </p>
                 <button pButton pRipple type="button" icon="pi pi-plus" class="p-button-rounded p-button-help p-button-text p-button-sm ml-auto"></button>
