--- a/src/app/layout/component/cart/cart.component.html
+++ b/src/app/layout/component/cart/cart.component.html
@@ -1,6 +1,6 @@
-<div class="mb-2 hidden">
-    <button style="width: 45px; height: 45px; display: flex; justify-content: center; " pButton pRipple type="button"
-        class="p-button-rounded p-button-lg p-button-raised"
+<div class="mb-2 " class="car_button_float">
+    <button pButton pRipple type="button"
+        class="p-button-rounded p-button-lg p-button-raised button_cart"
         [ngClass]="{
             'p-button-secondary p-button-text whitebackground': !buttonActive ,
             'p-button-help '     : buttonActive,
@@ -9,11 +9,11 @@
         <i class="material-icons-outlined">shopping_cart</i>
     </button>
 
-    <p-overlayPanel id="panel" #op [style]="{ width: '300px', padding: 'unset' }">
+    <p-overlayPanel id="panel" #op class="overlayPanel_cart" [ngClass]="{'overlayPanel_cart': true}" [style]="{ width: '300px', padding: '0',borderRadius: '10px'}">
         <ng-template pTemplate style="width: 0px">
             <app-cart-summary [scroll]=true></app-cart-summary>
-            <div class="flex justify-content-center background">
-                <button pButton pRipple type="button" class="p-button-text p-button-rounded p-button-secondary font-bold mb-2" style="color: #9C27B0;" (click)="openSideBag()">
+            <div class="flex justify-content-center background bottom_card">
+                <button pButton pRipple type="button" class="p-button-text text-xs p-button-rounded p-button-secondary font-bold mb-3 btn_card" style="color: #9C27B0;" (click)="openSideBag()">
                     Ir a bolsa de compras
                 </button>
             </div>
