--- a/src/app/layout/component/cart-summary/cart-summary.component.html
+++ b/src/app/layout/component/cart-summary/cart-summary.component.html
@@ -1,15 +1,15 @@
-<div class="flex flex-column px-3" style="background-color: #f8faf9">
-    <div class="text-base py-2 px-2 font-bold text-900">
+<div class="flex flex-column base-sumary p-0" style="background-color: #f8faf9">
+    <div class="font-bold text-base py-3 px-3 bg-white top-card-order">
         Tienes {{ getQuantity() }} productos
     </div>
-    <div class="flex flex-column" [ngClass]="{ 'overflow-y-scroll max': (products.length > 3 && scroll) }">
-        <p-card class="py-1 px-2" *ngFor="let product of products; let i = index">
+    <div class="flex flex-column py-3 px-3" [ngClass]="{ 'overflow-y-scroll max': (products.length > 3 && scroll) }">
+        <p-card class="mb-2 sumary_card" *ngFor="let product of products; let i = index">
             <div class="px-2">
                 <div class="flex flex-row align-items-center">
                     <img class="h-3rem w-3rem mx-2 mb-2" src="../../../../assets/perfil-tiendi-icono-invertido.png"
                         alt="" />
                     <div class="flex flex-column w-full">
-                        <div class="cuttext">
+                        <div class="cuttext w-12 mb-2 text-sm pt-2">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque
                             distinctio eligendi similique optio sint blanditiis in nostrum est
                             accusantium dolor tempora illo, laboriosam impedit commodi dolore
@@ -31,7 +31,7 @@
               p-button-rounded p-button-help p-button-text p-button-sm
               mr-2
             " (click)="restOrDelete(i)"></button>
-                    <p class="w-4 p-inputtext-sm text-center" type="text" pInputText style="background-color: #eceff1">
+                    <p class="w-3 p-input text-xs text-center btn_sum p-0" type="text" pInputText >
                         {{ product.quantity }} unid
                     </p>
 
@@ -48,9 +48,9 @@
         </p-card>
     </div>
 
-    <div class="text-base font-bold px-3 py-1 flex flex-row">
-        <div class="text-left w-6 text-900">Sub total</div>
-        <div class="text-right w-6 text-900">${{ getSubtotal() }}</div>
+    <div class="text-base font-bold px-5 pt-3 flex flex-row">
+        <div class="text-left w-6 text-base">Sub total</div>
+        <div class="text-right w-6 text-base">${{ getSubtotal() }}</div>
     </div>
     <div class="flex justify-content-center pb-3">
         <!-- <button
