--- a/src/app/layout/component/card/card.component.scss
+++ b/src/app/layout/component/card/card.component.scss
@@ -1,50 +1,54 @@
 #card-product {
-    .p-card{
-      box-shadow: none;
-      &:hover{
-        box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important
+  .p-card {
+    box-shadow: none;
+    &:hover {
+      box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+    }
+  }
+  .p-card .p-card-content {
+    padding: 0.5rem 1rem;
+    margin-bottom: 0.5rem;
+  }
 
-      }
-    }
-    .p-card .p-card-content{
-        padding: 0.5rem 1rem;
-        margin-bottom: 0.5rem;
-    }
+  .quantity {
+    background-color: #eceff1;
+  }
+  .quantity_val {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+  }
 
-    .quantity {
-        background-color: #eceff1
+  .selected-product {
+    background-color: #9c27b0 !important;
+    color: #fff;
+    outline: none;
+    display: flex;
+    justify-content: center;
+    span {
+      flex: 0;
     }
-    .quantity_val{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border: none;
-    }
+  }
 
-    .selected-product {
-        background-color: #9C27B0 !important;
-        color: #fff;
-        outline: none;
-        display: flex;
-        justify-content: center;
-        span{
-          flex:0;          
-        }
-    }
-
-    .card-content {
-        width: 300px;
-    }
-  .tag_price{
+  .card-content {
+    width: 300px;
+  }
+  .tag_price {
     display: none;
   }
   .desc_ {
     display: flex;
     align-items: center;
     color: #f44336;
-    .tag_price{
+    .tag_price {
       background-color: #f44336;
       display: inline-block;
     }
+  }
+
+  .shopping-icon {
+    color: purple;
+    font-size: 30px;
   }
 }
