--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -14,6 +14,6 @@
   </div>
 
   <div class="flex justify-content-end w-6 mt-3">
-    <app-user (onOpenSideMyOrders)="openSideMyOrders()"></app-user>
+    <app-user (onOpenSideRecentOrderMore)="openSideRecentOrderMore()"></app-user>
   </div>
 </div>
