--- a/src/app/layout/component/user/user.component.html
+++ b/src/app/layout/component/user/user.component.html
@@ -1,32 +1,32 @@
 <div class="flex justify-content-end w-full pr-6">
-    <button style="width: 39px; height: 39px; display: flex; justify-content: center" pButton pRipple type="button"
-        class="p-button-rounded p-button-secondary p-button-text" pTooltip="Ir a tiendi" tooltipPosition="top"
-        icon="material-icons-outlined">
-        <i class="material-icons-outlined">shopping_cart</i>
-    </button>
-    <button style="width: 39px; height: 39px; display: flex; justify-content: center" pButton pRipple type="button"
-        class="p-button-rounded p-button-secondary p-button-text" pTooltip="Ir a mi tienda" tooltipPosition="top"
-        icon="material-icons-outlined">
-        <i class="material-icons-outlined">storefront</i>
-    </button>
-    <button style="width: 39px; height: 39px; display: flex; justify-content: center" pButton pRipple type="button"
-        class="p-button-rounded p-button-secondary p-button-text" icon="material-icons-outlined">
-        <i class="material-icons-outlined">favorite_border</i>
-    </button>
-    <button style="width: 39px; height: 39px; display: flex; justify-content: center" pButton pRipple type="button"
-        class="p-button-rounded p-button-secondary p-button-text" icon="material-icons-outlined"
-        (click)="op.show($event)">
-        <i class="material-icons-outlined">local_shipping</i>
-    </button>
-    <p-overlayPanel #op [style]="{ width: '300px', padding: 'unset', borderRadius: '10px'}">
-        <ng-template pTemplate style="width: 0px">
-            <app-recent-orders [pedidos]="pedidos" [hidderButtonSummary]="true" (onOpenSideMyOrders)="openSideMyOrders()"> </app-recent-orders>
-        </ng-template>
-    </p-overlayPanel>
+  <button style="width: 39px; height: 39px; display: flex; justify-content: center" pButton pRipple type="button"
+    class="p-button-rounded p-button-secondary p-button-text" pTooltip="Ir a tiendi" tooltipPosition="top"
+    icon="material-icons-outlined">
+    <i class="material-icons-outlined">shopping_cart</i>
+  </button>
+  <button style="width: 39px; height: 39px; display: flex; justify-content: center" pButton pRipple type="button"
+    class="p-button-rounded p-button-secondary p-button-text" pTooltip="Ir a mi tienda" tooltipPosition="top"
+    icon="material-icons-outlined">
+    <i class="material-icons-outlined">storefront</i>
+  </button>
+  <button style="width: 39px; height: 39px; display: flex; justify-content: center" pButton pRipple type="button"
+    class="p-button-rounded p-button-secondary p-button-text" icon="material-icons-outlined">
+    <i class="material-icons-outlined">favorite_border</i>
+  </button>
+  <button style="width: 39px; height: 39px; display: flex; justify-content: center" pButton pRipple type="button"
+    class="p-button-rounded p-button-secondary p-button-text" icon="material-icons-outlined" (click)="op.show($event)">
+    <i class="material-icons-outlined">local_shipping</i>
+  </button>
+  <p-overlayPanel #op [style]="{ width: '300px', padding: 'unset', borderRadius: '10px'}">
+    <ng-template pTemplate style="width: 0px">
+      <app-recent-order [pedidos]="pedidos" (onOpenSideRecentOrderMore)="openSideRecentOrderMore()">
+      </app-recent-order>
+    </ng-template>
+  </p-overlayPanel>
 
-    <p-button styleClass="p-button-text">
-        <img class="border-circle mx-2" alt="logo" src="../../../../assets/perfil-tiendi-icono-invertido.png"
-            style="width: 1.5rem" />
-        <span class="p-ml-2 text-sm" style="color: black">Hola <b class="p-text-bold">Usuario</b></span>
-    </p-button>
+  <p-button styleClass="p-button-text">
+    <img class="border-circle mx-2" alt="logo" src="../../../../assets/perfil-tiendi-icono-invertido.png"
+      style="width: 1.5rem" />
+    <span class="p-ml-2 text-sm" style="color: black">Hola <b class="p-text-bold">Usuario</b></span>
+  </p-button>
 </div>
