Pedidos recientes, pedidos recientes más, detalle de pedido

--- a/src/app/layout/component/payment-and-delivery/payment-and-delivery.component.html
+++ b/src/app/layout/component/payment-and-delivery/payment-and-delivery.component.html
@@ -38,5 +38,5 @@
             <div class="font-italic px-4 pt-4 pb-2 text-900">Mensaje informativo</div>
         </p-card>
     </div>
-    <app-summary></app-summary>
+    <app-recent-order-detail></app-recent-order-detail>
 </div>
