--- a/src/app/layout/component/recent-order-more/recent-order-more.component.html
+++ b/src/app/layout/component/recent-order-more/recent-order-more.component.html
@@ -44,7 +44,7 @@
             <div class="flex flex-column w-1 aling-items-center">
               <button pButton pRipple type="button" icon="pi pi-arrow-right"
                 class="p-button-rounded p-button-secondary p-button-text m-1" style="color: #0cc2a9"
-                (click)="openSideOrderSummary()"></button>
+                (click)="openSideOrderSummary(pedido.IDPedido)"></button>
             </div>
           </div>
         </div>
