--- a/src/app/layout/component/recent-order-detail/recent-order-detail.component.html
+++ b/src/app/layout/component/recent-order-detail/recent-order-detail.component.html
@@ -1,20 +1,20 @@
 <div class="flex flex-column p-2" style="background-color: #f8faf9">
   <p-card class="py-1 px-4">
       <div class="font-bold text-xl text-900 px-3">
-          Resumen del pedido: 3 productos
+          Resumen del pedido: {{pedido.PedidoDetalle.length}} productos
       </div>
-      <div class="px-3" *ngFor="let product of products">
+      <div class="px-3" *ngFor="let pedidoDetalle of pedido.PedidoDetalle">
           <div class="flex flex-row align-items-center">
               <img class="h-1 w-1 m-3" src="../../../../assets/perfil-tiendi-icono-invertido.png" alt="" />
               <div class="flex flex-column flex-wrap w-7">
-                  <div class="text-sm gray">Marca</div>
-                  <div class="">{{ product.Nombre }}</div>
-                  <div class="text-sm gray">unidades</div>
+                  <div class="text-sm gray">{{pedidoDetalle.MarcaDes}}</div>
+                  <div class="">{{ pedidoDetalle.Nombre }}</div>
+                  <div class="text-sm gray">{{pedidoDetalle.Cantidad}} {{pedidoDetalle.UnidadMedidaDes}}</div>
               </div>
               <div class="flex flex-column w-3">
-                  <div class="font-bold text-right">{{ product.Precio }}</div>
+                  <div class="font-bold text-right">{{ pedidoDetalle.Precio }}</div>
                   <div class="text-sm line-through gray text-right">
-                      {{ product.Precio + 120 }}
+                      {{ pedidoDetalle.Precio + pedidoDetalle.Descuento }}
                   </div>
               </div>
           </div>
@@ -24,19 +24,24 @@
           <div class="flex flex-column justify-content-end w-4">
               <div class="text-lg font-bold flex flex-row ">
                   <div class="text-lg font-bold text-right w-6">Subtotal </div>
-                  <div class="text-right w-6 pr-3">$4,999</div>
+                  <div class="text-right w-6 pr-3">{{pedido.SubTotal}}</div>
               </div>
               <p-divider></p-divider>
               <div class="text-lg font-bold gray flex flex-row">
-                  <div class="text-lg font-bold text-right w-6">Despacho </div>
-                  <div class="text-right w-6 pr-3">$0</div>
+                  <div class="text-lg font-bold text-right w-6">IGV </div>
+                  <div class="text-right w-6 pr-3">{{pedido.IGV}}</div>
               </div>
               <p-divider></p-divider>
+              <div class="text-lg font-bold gray flex flex-row">
+                <div class="text-lg font-bold text-right w-6">Despacho</div>
+                <div class="text-right w-6 pr-3">{{pedido.DespachoMonto}}</div>
+            </div>
+            <p-divider></p-divider>
               <div class="text-lg font-bold purple flex flex-row">
                   <div class="text-lg font-bold text-right w-6">
-                      Subtotal
+                      Total
                   </div>
-                  <div class="text-right w-6 pr-3">$4,999</div>
+                  <div class="text-right w-6 pr-3">{{pedido.Total}}</div>
               </div>
           </div>
       </div>
